[gd_scene load_steps=4 format=2]

[ext_resource path="res://Chars/Pawn.tscn" type="PackedScene" id=1]
[ext_resource path="res://NPC/NPC/NPC.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 200.0

[node name="Pawn" index="0" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="ViewArea" type="Area2D" parent="." index="2"]

[node name="View" type="CollisionShape2D" parent="ViewArea" index="0"]
shape = SubResource( 1 )

